# ocr_projet1_bm

./: .gitignore  LeSolliec_Mathilde_2_presentation_200725.pptx  pyproject.toml
